--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
 		"axios": "^0.20.0",
 		"classnames": "^2.2.6",
 		"font-awesome": "^4.7.0",
+		"node-geocoder": "^3.27.0",
+		"node-open-geocoder": "^4.0.1",
 		"node-sass": "^4.14.1",
+		"query-string": "^6.13.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-geolocated": "^3.0.1",
 		"react-router": "^5.2.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
+		"react-select": "^3.1.0",
 		"react-toastify": "^5.5.0",
 		"reactstrap": "^8.0.0"
 	},
