added map and some changes

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"axios": "^0.20.0",
 		"classnames": "^2.2.6",
 		"font-awesome": "^4.7.0",
+		"google-maps-react": "^2.0.6",
 		"node-geocoder": "^3.27.0",
 		"node-open-geocoder": "^4.0.1",
 		"node-sass": "^4.14.1",
@@ -37,7 +38,15 @@
 		"extends": "react-app"
 	},
 	"browserslist": {
-		"production": [ ">0.2%", "not dead", "not op_mini all" ],
-		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	}
 }
