--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"react-scripts": "3.4.3",
 		"react-select": "^3.1.0",
 		"react-toastify": "^5.5.0",
+		"react-whatsapp": "^0.2.0",
 		"reactstrap": "^8.0.0"
 	},
 	"scripts": {
