--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-geolocated": "^3.0.1",
+		"react-multi-select-component": "^3.0.2",
 		"react-router": "^5.2.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
