--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"node-sass": "^4.14.1",
 		"query-string": "^6.13.1",
 		"react": "^16.13.1",
+		"react-autosuggest": "^10.0.2",
 		"react-dom": "^16.13.1",
 		"react-geolocated": "^3.0.1",
 		"react-multi-select-component": "^3.0.2",
